--- a/faq/current.html
+++ b/faq/current.html
@@ -151,6 +151,14 @@ bgpd(8) to fail parsing the config.
 Instead disable the route evaluation process on the Loc-RIB with
 <code>rde rib Loc-RIB no evaluate</code>.
 
+<h3 id="r20190821">2019/08/21 IPv6 link-local address change</h3>
+It has been discovered that some hosting providers route customer IPv6
+prefixes to link local addresses derived from ethernet MAC addresses
+(RFC 2464).
+This leads to hard to debug IPv6 connectivity issues with the RFC 7217 style
+random but stable link-local addresses that we used.
+Link-local addresses are again formed from ethernet mac addresses.
+
 <!--
      Two blank lines before new sections.
      New sentences start on new lines.
