[1.236] sync - faq/faq1.html

--- a/faq/faq1.html
+++ b/faq/faq1.html
@@ -185,6 +185,8 @@ OpenBSD поставляется с обширной документацией 
   - терминальный мультиплексор.
   <li><a href="https://man.openbsd.org/ifconfig">ifconfig(8)</a>
   - конфигурирование параметров сетевых интерфейсов.
+  <li><a href="https://man.openbsd.org/ftp">ftp(1)</a>
+  - загрузка файлов из сети (поддерживается FTP/HTTP/HTTPS)
   <li><a href="https://man.openbsd.org/login.conf">login.conf(5)</a>
   - формат файла конфигурации класса входа в систему.
   <li><a href="https://man.openbsd.org/sendbug">sendbug(1)</a>
