[1.540] update links for FAQ6 - faq/faq6.html

--- a/faq/index.html
+++ b/faq/index.html
@@ -129,14 +129,14 @@ OpenBSD, так и <a href="http://www.openbsd.org/cgi-bin/man.cgi">онлайн
 <li><a href="faq14.html#softraid"     >RAID и шифрование дисков</a>
 </ul>
 
-<h3><a href="https://www.openbsd.org/faq/faq6.html">Работа в сети</a></h3>
+<h3><a href="faq6.html">Работа в сети</a></h3>
 <ul>
-<li><a href="https://www.openbsd.org/faq/faq6.html#Setup"    >Настройка сети</a>
-<li><a href="https://www.openbsd.org/faq/faq6.html#DHCP"     >Dynamic Host Configuration Protocol</a>
-<li><a href="https://www.openbsd.org/faq/faq6.html#Wireless" >Беспроводные сети</a>
-<li><a href="https://www.openbsd.org/faq/faq6.html#Bridge"   >Setting Up a Network Bridge</a>
-<li><a href="https://www.openbsd.org/faq/faq6.html#Multipath">Equal-cost Multipath Routing</a>
-<li><a href="https://www.openbsd.org/faq/faq6.html#NFS"      >Использование NFS</a>
+<li><a href="faq6.html#Setup"    >Настройка сети</a>
+<li><a href="faq6.html#DHCP"     >Dynamic Host Configuration Protocol</a>
+<li><a href="faq6.html#Wireless" >Беспроводные сети</a>
+<li><a href="faq6.html#Bridge"   >Настройка сетевого моста (bridge)</a>
+<li><a href="faq6.html#Multipath">Equal-cost Multipath Routing</a>
+<li><a href="faq6.html#NFS"      >Использование NFS</a>
 </ul>
 
 <h3><a href="https://www.openbsd.org/faq/faq7.html">Управление клавиатурой и дисплеем</a></h3>
