--- a/faq/current.html
+++ b/faq/current.html
@@ -153,11 +153,39 @@ Instead disable the route evaluation process on the Loc-RIB with
 
 <h3 id="r20190821">2019/08/21 IPv6 link-local address change</h3>
 It has been discovered that some hosting providers route customer IPv6
-prefixes to link local addresses derived from ethernet MAC addresses
+prefixes to link local addresses derived from Ethernet MAC addresses
 (RFC 2464).
-This leads to hard to debug IPv6 connectivity issues with the RFC 7217 style
-random but stable link-local addresses that we used.
-Link-local addresses are again formed from ethernet mac addresses.
+This leads to hard to debug IPv6 connectivity issues with the
+RFC&nbsp;7217-style random but stable link-local addresses that we used.
+Link-local addresses are again formed from Ethernet MAC addresses.
+
+
+<h3 id="r20190827">2019/08/27 - [ports] Datadir added to default postgres flags</h3>
+
+Default <a href="https://man.openbsd.org/rc.d.8">rc.d(8)</a> flags
+for databases/postgresql have been changed from:
+<pre class="cmdbox">
+daemon_flags="-w -l /var/postgresql/logfile"
+</pre>
+to
+<pre class="cmdbox">
+daemon_flags="-D /var/postgresql/data -w -l /var/postgresql/logfile"
+</pre>
+if you defined <code>postgresql_flags</code> in <code>/etc/rc.conf.local</code>
+make sure that your entry includes <code>-D /var/postgresql/data</code>.
+
+
+<h3 id="r20190911">2019/09/11 - [ports] rss2email update, save config before updating</h3>
+
+rss2email has been updated to a new major version with incompatible
+configuration.
+Before updating, save your feed list:
+<pre class="cmdbox">
+r2e list &gt; ~/r2e.txt
+r2e opmlexport &gt; ~/r2e.opml
+</pre>
+After updating, see the notes in /usr/local/share/pkg-readmes/rss2email.
+
 
 <!--
      Two blank lines before new sections.
@@ -166,4 +194,4 @@ Link-local addresses are again formed from ethernet mac addresses.
 -->
 
 <hr id="end">
-<small>$OpenBSD: current.html,v 1.1006 2019/08/07 10:34:25 claudio Exp $</small>
+<small>$OpenBSD: current.html,v 1.1010 2019/09/11 00:19:57 sthen Exp $</small>
